# OpenEnv-Meta

./: Dockerfile  README.MD  baseline_results.json  dockerfile  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
data/: emails.py
server/: app.py
tasks/: graders.py
